--- a/src/main/resources/assets/assorteddiscoveries/lang/en_us.json
+++ b/src/main/resources/assets/assorteddiscoveries/lang/en_us.json
@@ -129,6 +129,7 @@
   "block.assorteddiscoveries.acacia_planter_box": "Acacia Planter Box",
   "block.assorteddiscoveries.dark_oak_planter_box": "Dark Oak Planter Box",
   "block.assorteddiscoveries.mangrove_planter_box": "Mangrove Planter Box",
+  "block.assorteddiscoveries.cherry_planter_box": "Cherry Planter Box",
   "block.assorteddiscoveries.warped_planter_box": "Warped Planter Box",
   "block.assorteddiscoveries.crimson_planter_box": "Crimson Planter Box",
   "block.assorteddiscoveries.oak_wall": "Oak Wall",
@@ -138,6 +139,7 @@
   "block.assorteddiscoveries.acacia_wall": "Acacia Wall",
   "block.assorteddiscoveries.dark_oak_wall": "Dark Oak Wall",
   "block.assorteddiscoveries.mangrove_wall": "Mangrove Wall",
+  "block.assorteddiscoveries.cherry_wall": "Cherry Wall",
   "block.assorteddiscoveries.warped_wall": "Warped Wall",
   "block.assorteddiscoveries.crimson_wall": "Crimson Wall",
   "block.assorteddiscoveries.stripped_oak_wall": "Stripped Oak Wall",
@@ -147,6 +149,7 @@
   "block.assorteddiscoveries.stripped_acacia_wall": "Stripped Acacia Wall",
   "block.assorteddiscoveries.stripped_dark_oak_wall": "Stripped Dark Oak Wall",
   "block.assorteddiscoveries.stripped_mangrove_wall": "Stripped Mangrove Wall",
+  "block.assorteddiscoveries.stripped_cherry_wall": "Stripped Cherry Wall",
   "block.assorteddiscoveries.stripped_warped_wall": "Stripped Warped Wall",
   "block.assorteddiscoveries.stripped_crimson_wall": "Stripped Crimson Wall",
   "block.assorteddiscoveries.oak_rope_ladder": "Oak Rope Ladder",
@@ -158,6 +161,7 @@
   "block.assorteddiscoveries.warped_rope_ladder": "Warped Rope Ladder",
   "block.assorteddiscoveries.crimson_rope_ladder": "Crimson Rope Ladder",
   "block.assorteddiscoveries.mangrove_rope_ladder": "Mangrove Rope Ladder",
+  "block.assorteddiscoveries.cherry_rope_ladder": "Cherry Rope Ladder",
   "block.assorteddiscoveries.iron_ladder": "Iron Ladder",
   "block.assorteddiscoveries.snow_bricks": "Snow Bricks",
   "block.assorteddiscoveries.snow_brick_stairs": "Snow Brick Stairs",
