Added polished dripstone blocks!

--- a/src/main/resources/assets/assorteddiscoveries/lang/en_us.json
+++ b/src/main/resources/assets/assorteddiscoveries/lang/en_us.json
@@ -405,6 +405,10 @@
   "block.assorteddiscoveries.camel_plush": "Camel Plush",
   "block.assorteddiscoveries.cindersnap_berry_bush": "Cindersnap Berry Bush",
   "block.assorteddiscoveries.frostbite_berry_bush": "Frostbite Berry Bush",
+  "block.assorteddiscoveries.polished_dripstone": "Polished Dripstone",
+  "block.assorteddiscoveries.polished_dripstone_stairs": "Polished Dripstone Stairs",
+  "block.assorteddiscoveries.polished_dripstone_slab": "Polished Dripstone Slab",
+  "block.assorteddiscoveries.polished_dripstone_wall": "Polished Dripstone Wall",
 
   "container.assorteddiscoveries.woodcutter": "Woodcutter",
 
