--- a/src/main/resources/assets/assorteddiscoveries/lang/en_us.json
+++ b/src/main/resources/assets/assorteddiscoveries/lang/en_us.json
@@ -405,6 +405,10 @@
   "block.assorteddiscoveries.polished_dripstone_stairs": "Polished Dripstone Stairs",
   "block.assorteddiscoveries.polished_dripstone_slab": "Polished Dripstone Slab",
   "block.assorteddiscoveries.polished_dripstone_wall": "Polished Dripstone Wall",
+  "block.assorteddiscoveries.polished_calcite": "Polished Calcite",
+  "block.assorteddiscoveries.polished_calcite_stairs": "Polished Calcite Stairs",
+  "block.assorteddiscoveries.polished_calcite_slab": "Polished Calcite Slab",
+  "block.assorteddiscoveries.polished_calcite_wall": "Polished Calcite Wall",
 
   "container.assorteddiscoveries.woodcutter": "Woodcutter",
 
