Added bamboo planter box blocks.

--- a/src/main/resources/assets/assorteddiscoveries/lang/en_us.json
+++ b/src/main/resources/assets/assorteddiscoveries/lang/en_us.json
@@ -399,6 +399,7 @@
   "block.assorteddiscoveries.calcite_stairs": "Calcite Stairs",
   "block.assorteddiscoveries.calcite_slab": "Calcite Slab",
   "block.assorteddiscoveries.calcite_wall": "Calcite Wall",
+  "block.assorteddiscoveries.bamboo_planter_box": "Bamboo Planter Box",
 
   "container.assorteddiscoveries.woodcutter": "Woodcutter",
 
